<resources>
    <string name="app_name">Élan</string>

    <!-- Barre de navigation -->
    <string name="nav_home">Accueil</string>
    <string name="nav_history">Historique</string>
    <string name="nav_settings">Réglages</string>
</resources>
